[package]
name = "mdview"
version = "0.1.0"
edition = "2024"
description = "Ultra-simple read-only Markdown viewer for Windows 11 built with Rust + GPUI"
license = "MIT OR Apache-2.0"
publish = false
resolver = "2"

[dependencies]
anyhow = "1.0"
comemo = "0.5"
gpui = "0.2.2"
interprocess = "2.4"
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer", tag = "v0.2.0", default-features = false }
pulldown-cmark = "0.12"
resvg = "0.45"
thiserror = "2.0"
tiny-skia = "0.11"
fontdb = "0.23"
typst = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-svg = "0.14"
usvg = "0.45"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
opt-level = 3
